[package]
name = "links"
version = "0.5.0"
authors = ["J/A <archer884@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.56"
clap = { version = "3.1.9", features = ["derive"] }
hashbrown = "0.12.0"
extractor = { path = "../extractor" }
reqwest = { version = "0.11.10", features = ["blocking"] }
