[package]
name = "links"
version = "0.5.0"
authors = ["J/A <archer884@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.65"
clap = { version = "3.2.22", features = ["derive"] }
hashbrown = "0.12.3"
extractor = { path = "../extractor" }
reqwest = { version = "0.11.12", features = ["blocking"] }
